components/perses/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perses
  namespace: perses
  annotations:
    kube-vip.io/loadbalancerIPs: 192.168.13.10
    cert-manager.io/cluster-issuer: "local-ca-issuer"
spec:
  ingressClassName: cilium
  rules:
  - host: perses.nekropolis.irminsul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: perses
            port:
              number: 8080
  tls:
  - hosts:
    - perses.nekropolis.irminsul
    secretName: perses
